Version 4.3.3   17 May 2014

    * Add AbstractWidgetUtils.getUrl() to tie button clicks to URLs.
    * Deprecate Base64Coder, since there are lots of alternatives to this code.

Version 4.3.2   06 May 2014

    * Bump up to the latest Mvp4g snapshot, which supports Super Dev Mode.

Version 4.3.1   02 Apr 2014

    * Add new external utility code, 3 classes from the Wildcard v1.1 project.
    * Re-implement FilesystemUtils.getGlobContents() in terms of Wildcard.

Version 4.3.0   02 Apr 2014

    * Add AbstractWidgetUtils.clickButtonOnEscape() and .clickButtonOnEnter().

Version 4.2.0   18 Mar 2014

    * Add FilesystemUtils.getLastModifiedDate() and related method on IFilesystemService.

Version 4.1.0   11 Mar 2014

    * Add new service ProcessBuilderService.
    * Add FilesystemService to wrap FilesystemUtils in a way that's easier to inject.
    * Add FilesystemUtils.getGlobContents() and related method in FilesystemService.
    * Add PropertiesUtils.getMatchingPrefixes() and PropertiesUtils.getMatchingChildren().
    * Add some UTC-specific methods on DateUtils.

Version 4.0.1   27 Jan 2014

    * Add a hack into build.gradle so that source jars get included in Eclipse .classpath if available.
    * Make a few methods on PropertyBasedConfig protected, to make it easier to extend.

Version 4.0.0   16 Jan 2014

    * Bump to 4.0.0 due to interface changes.
    * Improve GwtLocalizationUtils so it deals transparently with unknown/invalid constants.
    * Revamp exception hierarchy to make an abtracted exception context available in all exceptions.
    * Make GwtExceptionUtils smart enough to use exception context for stack trace, if it exists.

Version 3.5.0   06 Jan 2014

    * Bump up to GIN 2.1.2, which allows CedarCommon to be used with GWT 2.6.0 RC3.

Version 3.4.4   03 Jan 2014

    * Add support for UnifiedEvent with DEFAULT_EVENT, since the type is often not used.
    * Add new UnifiedEventType KEY_EVENT to be associated with key-related handlers.